--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     const result: <a href="ts-time/LocalDate.html" target="_parent">LocalDate</a>[] = [];
     while (from.<a href="ts-time/LocalDate.html#default--isBefore" target="_parent">isBefore</a>(to)) {
       result.push(from);
-      from = to.<a href="ts-time/LocalDate.html#default--plus" target="_parent">plus</a>(step);
+      from = from.<a href="ts-time/LocalDate.html#default--plus" target="_parent">plus</a>(step);
     }
     return result;
   }</pre>
@@ -101,6 +101,7 @@
         <li><a href="ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
         <li><a href="ts-time/Duration.html" target="_parent">Duration</a></li>
         <li><a href="ts-time/Era.html" target="_parent">Era</a></li>
+        <li><a href="ts-time/errors.html" target="_parent">errors</a></li>
         <li><a href="ts-time/Instant.html" target="_parent">Instant</a></li>
         <li><a href="ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
         <li><a href="ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
