--- a/ts-time-format/OffsetFormatter.html
+++ b/ts-time-format/OffsetFormatter.html
@@ -215,7 +215,7 @@ Compiles <b>value</b> to a string based on number of sequential characters speci
   </thead>
   <tbody>
     <tr><td>X</td><td><a href="#OFFSET_COMPILER" target="_parent">OFFSET_COMPILER</a></td><td>+05</td><td>+0500</td><td>+05:00</td><td>+050030</td><td>+05:00:30</td></tr>
-    <tr><td>X</td><td><a href="#OFFSET_NZ_COMPILER" target="_parent">OFFSET_NZ_COMPILER</a></td><td>+05</td><td>+0500</td><td>+05:00</td><td>+050030</td><td>+05:00:30</td></tr>
+    <tr><td>x</td><td><a href="#OFFSET_NZ_COMPILER" target="_parent">OFFSET_NZ_COMPILER</a></td><td>+05</td><td>+0500</td><td>+05:00</td><td>+050030</td><td>+05:00:30</td></tr>
   </tbody>
 </table>
 
@@ -257,6 +257,7 @@ as "+0130".</li>
         <li><a href="../ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
         <li><a href="../ts-time/Duration.html" target="_parent">Duration</a></li>
         <li><a href="../ts-time/Era.html" target="_parent">Era</a></li>
+        <li><a href="../ts-time/errors.html" target="_parent">errors</a></li>
         <li><a href="../ts-time/Instant.html" target="_parent">Instant</a></li>
         <li><a href="../ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
         <li><a href="../ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
