--- a/ts-time-format/TimeFormatter.html
+++ b/ts-time-format/TimeFormatter.html
@@ -334,6 +334,7 @@ example, writes "4", "48" and "485" for 485 milliseconds and lengths 1, 2 and 3 
         <li><a href="../ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
         <li><a href="../ts-time/Duration.html" target="_parent">Duration</a></li>
         <li><a href="../ts-time/Era.html" target="_parent">Era</a></li>
+        <li><a href="../ts-time/errors.html" target="_parent">errors</a></li>
         <li><a href="../ts-time/Instant.html" target="_parent">Instant</a></li>
         <li><a href="../ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
         <li><a href="../ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
