--- a/ts-time-format/ZonedDateTimeFormatter.html
+++ b/ts-time-format/ZonedDateTimeFormatter.html
@@ -221,6 +221,7 @@ around <a href="DateFormatter.html#DATE_COMPILERS" target="_parent">DATE_COMPILE
         <li><a href="../ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
         <li><a href="../ts-time/Duration.html" target="_parent">Duration</a></li>
         <li><a href="../ts-time/Era.html" target="_parent">Era</a></li>
+        <li><a href="../ts-time/errors.html" target="_parent">errors</a></li>
         <li><a href="../ts-time/Instant.html" target="_parent">Instant</a></li>
         <li><a href="../ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
         <li><a href="../ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
