--- a/ts-time/Month.html
+++ b/ts-time/Month.html
@@ -215,7 +215,7 @@ So, if your variable may contain null or undefined, use the respective static me
 
 <h5><span id="default--of-static"></span>of<a class="anchorjs-link" href="#default--of-static" aria-label="Anchor" style="padding-left: 0.375em;">#</a></h5>
 <div class="doc-member">
-<p><code>(value: number | <b>Month</b>): <b>Month</b>
+<p><code>(value: number | <b>Month</b>): <b>Month</b> throws <a href="errors.html#InvalidMonthError" target="_parent">InvalidMonthError</a>
 </code></p>
 <dl class="row">
 <dt class="col-lg-2 col-sm-3">value</dt><dd class="col-lg-10 col-sm-9">Numeric value of the month.</dd>
@@ -346,6 +346,7 @@ Array of all months, from <a href="#JANUARY" target="_parent">JANUARY</a> to <a 
         <li><a href="DayOfWeek.html" target="_parent">DayOfWeek</a></li>
         <li><a href="Duration.html" target="_parent">Duration</a></li>
         <li><a href="Era.html" target="_parent">Era</a></li>
+        <li><a href="errors.html" target="_parent">errors</a></li>
         <li><a href="Instant.html" target="_parent">Instant</a></li>
         <li><a href="LocalDate.html" target="_parent">LocalDate</a></li>
         <li><a href="LocalDateTime.html" target="_parent">LocalDateTime</a></li>
