--- a/ts-time-format/DateFormatter.html
+++ b/ts-time-format/DateFormatter.html
@@ -400,6 +400,7 @@ For example, writes "04" for Thursday.</li>
         <li><a href="../ts-time/DayOfWeek.html" target="_parent">DayOfWeek</a></li>
         <li><a href="../ts-time/Duration.html" target="_parent">Duration</a></li>
         <li><a href="../ts-time/Era.html" target="_parent">Era</a></li>
+        <li><a href="../ts-time/errors.html" target="_parent">errors</a></li>
         <li><a href="../ts-time/Instant.html" target="_parent">Instant</a></li>
         <li><a href="../ts-time/LocalDate.html" target="_parent">LocalDate</a></li>
         <li><a href="../ts-time/LocalDateTime.html" target="_parent">LocalDateTime</a></li>
