--- a/ts-time/errors.html
+++ b/ts-time/errors.html
@@ -154,8 +154,9 @@
 				</nav>
 				<div class="doc-main">
 					<div class="container-fluid">
-						<h1><span id="default"></span>ts-time/errors</h1>
-						
+						<h1>ts-time/errors</h1>
+						<div class="alert alert-info">Available since ts-time 0.2.2.</div>
+
 						<h3>Consumption</h3>
 						<pre class="doc-consumption">import * as errors from "ts-time/errors";</pre>
 						
